[package]
name = "symbol-ty"
version = "0.2.2"
rust-version = "1.67"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "A library for generating symbols as type-level strings."

[dependencies]
symbol-ty-macro = { path = "symbol-ty-macro", version = "0.1.0" }

[dev-dependencies]
insta = "1.42"

[workspace]
members = [
    "symbol-ty-macro",
    "examples/foreign_crate",
]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
authors = ["Danik Vitek <x3665107@gmail.com>"]
repository = "https://github.com/DanikVitek/symbol-ty"
