[package]
name = "symbol-ty"
version = "0.3.0"
rust-version = "1.67"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "A library for generating symbols as type-level strings."

[dependencies]
hashbrown = { version = "0.15", optional = true }
once_cell = { version = "1.20", default-features = false, optional = true }
parking_lot = { version = "0.12", optional = true }
symbol-ty-macro = { path = "symbol-ty-macro", version = "0.1.1" }

[dev-dependencies]
insta = "1.42"

[features]
default = []
unstable__deref = ["dep:once_cell", "dep:hashbrown", "dep:parking_lot"]

[workspace]
members = [
    "symbol-ty-macro",
    "examples/foreign_crate",
]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
authors = ["Danik Vitek <x3665107@gmail.com>"]
repository = "https://github.com/DanikVitek/symbol-ty"
