[package]
name = "symbol-ty-macro"
version = "0.1.1"
rust-version = "1.67"
license.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "A procedural macro for generating symbols as type-level strings."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-crate = "3.2"
quote = "1"
syn = "2.0"

[dev-dependencies]
symbol-ty = { path = ".." }

